--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">MeusContatos</string>
+    <string name="meus_contatos">Meus Contatos</string>
 </resources>
