--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">MeusContatos</string>
     <string name="meus_contatos">Meus Contatos</string>
+    <string name="nome_do_contato">Nome do contato</string>
+    <string name="salvar">Salvar</string>
 </resources>
