--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="meus_contatos">Meus Contatos</string>
     <string name="nome_do_contato">Nome do contato</string>
     <string name="salvar">Salvar</string>
+    <string name="telefone">Telefone</string>
 </resources>
